[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/prototype ship.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://Assets/underglow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.1862, 15.2589 )

[node name="PlayerShip" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="underglow" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 3 )

[node name="AccelIndicator" type="Line2D" parent="."]
width = 5.0
default_color = Color( 0.866667, 0.188235, 0.188235, 1 )

[node name="PathPredictor" type="Line2D" parent="."]
width = 3.0
default_color = Color( 0.0862745, 0.619608, 0.184314, 1 )

[node name="AngleIndicator" type="Line2D" parent="."]
points = PoolVector2Array( -114.204, -12.2312 )
width = 3.0
default_color = Color( 0.866667, 0.980392, 0.0745098, 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.41581 )
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_PlayerShip_input_event"]
